--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="w3-half w3-container">
       <div class="w3-topbar w3-border-amber">
-        <img src="img_comp/sealions-min.jpg" style="width:100%">
+        <img src="img_comp/sealions-min.jpg" style="width:100%" alt="">
         <h2>Super Offers</h2>
         <p>Up to 50% offers. Always 25% student offers.</p>
       </div>
